Start adding some content

--- a/src/app/ui/experience/experience.component.html
+++ b/src/app/ui/experience/experience.component.html
@@ -1,1 +1,8 @@
-<p id="experience">experience works!</p>
+<section id="experience">
+    <ol>
+        <li>
+            <span>DVT</span>
+            <span>{{getDuration(experience[0].startDate, experience[0].endDate)}}</span>
+        </li>
+    </ol>
+</section>
