--- a/src/app/ui/sidebar/sidebar.component.html
+++ b/src/app/ui/sidebar/sidebar.component.html
@@ -1,9 +1,9 @@
-<aside class="flex flex-col fixed">
-    <header>
-        <h1 class="">Hi! My name is</h1>
-        <h2 class="text-secondary">Taylor Ray.</h2>
-        <h3 class="">I build things for the web.</h3>
-        <h4 class="">I currently work for <a href="https://www.dvt.co.za/" class="text-accent" target="_blank">DVT</a>.</h4>
+<aside class="sticky flex flex-col justify-center items-center w-full h-screen max-h-screen top-0 gap-5">
+    <header class="flex flex-col gap-2">
+        <h1 class="text text-3xl">Hi, my name is</h1>
+        <h2 class="text-secondary text-9xl">Taylor Ray.</h2>
+        <h3 class="text-5xl">I build things for the web.</h3>
+<!--        <h4 class="text-3xl">I currently work for <a href="https://www.dvt.co.za/" class="text-accent" target="_blank">DVT</a>.</h4>-->
     </header>
     <tr-nav />
     <tr-social />
