--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <section class="grid grid-cols-2">
     <tr-sidebar />
-    <main class="flex flex-col gap-[1000px]">
+    <main class="flex flex-col gap-[100px] pt-40">
         <tr-about />
         <tr-skills />
         <tr-experience />
