--- a/src/app/ui/nav/nav.component.html
+++ b/src/app/ui/nav/nav.component.html
@@ -1,4 +1,4 @@
-<nav class="flex flex-col text-sm">
+<nav class="flex flex-col text-sm gap-2">
     <a href="#about" class="group"><span class="h-px w-10 bg-white inline-block align-middle mr-4 group-hover:w-16 transition-all duration-500"></span>ABOUT</a>
     <a href="#skills" class="group"><span class="h-px w-10 bg-white inline-block align-middle mr-4 group-hover:w-16 transition-all duration-500"></span>SKILLS</a>
     <a href="#experience" class="group"><span class="h-px w-10 bg-white inline-block align-middle mr-4 group-hover:w-16 transition-all duration-500"></span>EXPERIENCE</a>
