--- a/src/app/ui/sidebar/sidebar.component.html
+++ b/src/app/ui/sidebar/sidebar.component.html
@@ -3,6 +3,7 @@
         <h1 class="text text-3xl">Hi, my name is</h1>
         <h2 class="text-secondary text-9xl">Taylor Ray.</h2>
         <h3 class="text-5xl">I build things for the web.</h3>
+        <p>I built this portfolio with Angular 17 and Tailwind, using Github to automate deployments to an AWS S3 bucket. I'm using an AWS Cloudfront distribution with an AWS ACM generated SSL certificate to serve the content.</p>
 <!--        <h4 class="text-3xl">I currently work for <a href="https://www.dvt.co.za/" class="text-accent" target="_blank">DVT</a>.</h4>-->
     </header>
     <tr-nav />
