--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<section class="grid grid-cols-2">
+<section class="grid grid-cols-2 gap-10">
     <tr-sidebar />
     <main class="flex flex-col gap-[100px] pt-40">
         <tr-about />
