--- a/src/app/ui/nav/nav.component.html
+++ b/src/app/ui/nav/nav.component.html
@@ -1,6 +1,16 @@
-<nav class="flex flex-col text-sm gap-2">
-    <a href="#about" class="group"><span class="h-px w-10 bg-white inline-block align-middle mr-4 group-hover:w-16 transition-all duration-500"></span>ABOUT</a>
-    <a href="#skills" class="group"><span class="h-px w-10 bg-white inline-block align-middle mr-4 group-hover:w-16 transition-all duration-500"></span>SKILLS</a>
-    <a href="#experience" class="group"><span class="h-px w-10 bg-white inline-block align-middle mr-4 group-hover:w-16 transition-all duration-500"></span>EXPERIENCE</a>
-    <a href="#projects" class="group"><span class="h-px w-10 bg-white inline-block align-middle mr-4 group-hover:w-16 transition-all duration-500"></span>PROJECTS</a>
+<nav class="flex flex-col text-xs gap-2">
+    @for (c of content; track c) {
+        <a [href]="'#' + c"
+           class="group hover:text-secondary w-fit"
+           [class.text-secondary]="isSelected(c)"
+           [class.font-bold]="isSelected(c)"
+           (click)="setVisibleContent(c)"
+        >
+            <span class="h-px w-10 bg-light_grey inline-block align-middle mr-4 group-hover:w-16 transition-all duration-300 group-hover:bg-secondary"
+                  [class.bg-secondary]="isSelected(c)"
+                  [class.w-16]="isSelected(c)">
+            </span>
+            {{c.toUpperCase()}}
+        </a>
+    }
 </nav>
