--- a/src/styles.scss
+++ b/src/styles.scss
@@ -11,6 +11,7 @@
   --blue: #124e66;
   --dark: #0b0c10;
   --grey: #1f2833;
+  --light-grey: #838383;
   --white: #fff;
   font-family: Inter, sans-serif;
   font-feature-settings: 'liga' 1, 'calt' 1; /* fix for Chrome */
