Add router check and more dummy content

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,9 @@
 <section class="grid grid-cols-2 gap-10">
     <tr-sidebar />
-    <main class="flex flex-col gap-[100px] pt-40">
-        <tr-about />
-        <tr-skills />
-        <tr-experience />
-        <tr-projects />
+    <main class="flex flex-col">
+        <tr-about id="about" class="pt-40"/>
+        <tr-skills id="skills" class="pt-40"/>
+        <tr-experience id="experience" class="pt-40"/>
+        <tr-projects id="projects" class="pt-40"/>
     </main>
 </section>
