--- a/src/app/ui/experience/experience.component.html
+++ b/src/app/ui/experience/experience.component.html
@@ -4,5 +4,29 @@
             <span>DVT</span>
             <span>{{getDuration(experience[0].startDate, experience[0].endDate)}}</span>
         </li>
+        <li>
+            <span>DVT</span>
+            <span>{{getDuration(experience[0].startDate, experience[0].endDate)}}</span>
+        </li>
+        <li>
+            <span>DVT</span>
+            <span>{{getDuration(experience[0].startDate, experience[0].endDate)}}</span>
+        </li>
+        <li>
+            <span>DVT</span>
+            <span>{{getDuration(experience[0].startDate, experience[0].endDate)}}</span>
+        </li>
+        <li>
+            <span>DVT</span>
+            <span>{{getDuration(experience[0].startDate, experience[0].endDate)}}</span>
+        </li>
+        <li>
+            <span>DVT</span>
+            <span>{{getDuration(experience[0].startDate, experience[0].endDate)}}</span>
+        </li>
+        <li>
+            <span>DVT</span>
+            <span>{{getDuration(experience[0].startDate, experience[0].endDate)}}</span>
+        </li>
     </ol>
 </section>
