--- a/src/app/ui/skills/skills.component.html
+++ b/src/app/ui/skills/skills.component.html
@@ -1,1 +1,29 @@
-<p id="skills">skills works!</p>
+<p>skills!</p>
+<p>skills!</p>
+<p>skills!</p>
+<p>skills!</p>
+<p>skills!</p>
+<p>skills!</p>
+<p>skills!</p>
+<p>skills!</p>
+<p>skills!</p>
+<p>skills!</p>
+<p>skills!</p>
+<p>skills!</p>
+<p>skills!</p>
+<p>skills!</p>
+<p>skills!</p>
+<p>skills!</p>
+<p>skills!</p>
+<p>skills!</p>
+<p>skills!</p>
+<p>skills!</p>
+<p>skills!</p>
+<p>skills!</p>
+<p>skills!</p>
+<p>skills!</p>
+<p>skills!</p>
+<p>skills!</p>
+<p>skills!</p>
+<p>skills!</p>
+<p>skills!</p>
