--- a/src/app/ui/projects/projects.component.html
+++ b/src/app/ui/projects/projects.component.html
@@ -1,1 +1,20 @@
-<p id="projects">projects works!</p>
+<p>projects!</p>
+<p>projects!</p>
+<p>projects!</p>
+<p>projects!</p>
+<p>projects!</p>
+<p>projects!</p>
+<p>projects!</p>
+<p>projects!</p>
+<p>projects!</p>
+<p>projects!</p>
+<p>projects!</p>
+<p>projects!</p>
+<p>projects!</p>
+<p>projects!</p>
+<p>projects!</p>
+<p>projects!</p>
+<p>projects!</p>
+<p>projects!</p>
+<p>projects!</p>
+<p>projects!</p>
