Minor visual updates

--- a/src/app/ui/sidebar/sidebar.component.html
+++ b/src/app/ui/sidebar/sidebar.component.html
@@ -1,11 +1,11 @@
-<aside class="sticky flex flex-col lg:justify-between items-center w-full lg:h-screen lg:min-h-screen max-h-screen top-0 gap-5 py-20">
+<aside class="sticky flex flex-col lg:justify-between lg:items-center w-full lg:h-screen lg:min-h-screen max-h-screen top-0 gap-5 py-20">
   <header class="flex flex-col gap-3">
-      <h1 class="text text-2xl lg:text-3xl text-primary">Hi, my name is</h1>
+      <h1 class="text-2xl lg:text-3xl text-primary">Hi, my name is</h1>
       <h2 class="text-white text-6xl lg:text-8xl">Taylor Ray.</h2>
       <h3 class="text-3xl lg:text-4xl text-primary">I build things for the web.</h3>
       <p>I built this portfolio with Angular 17 and Tailwind, using Github to automate deployments to an AWS S3 bucket. I'm using an AWS Cloudfront distribution with an AWS ACM generated SSL certificate to serve the content.</p>
 <!--        <h4 class="text-3xl">I currently work for <a href="https://www.dvt.co.za/" class="text-accent" target="_blank">DVT</a>.</h4>-->
   </header>
-  <tr-nav class="w-1/2 ml-10 text-primary"/>
-  <tr-social />
+  <tr-nav class="lg:w-10 text-primary lg:relative -left-10"/>
+  <tr-social class="text-primary"/>
 </aside>
