--- a/src/app/ui/nav/nav.component.html
+++ b/src/app/ui/nav/nav.component.html
@@ -1,9 +1,11 @@
-<nav class="flex flex-col text-xs gap-2">
+<nav class="flex flex-col text-xs font-light">
+  <ul class="w-max">
     @for (c of content; track c) {
+      <li class="mb-2">
         <a [href]="'#' + c"
            class="group hover:text-secondary w-fit"
            [class.text-secondary]="isSelected(c)"
-           [class.font-bold]="isSelected(c)"
+           [class.font-normal]="isSelected(c)"
            (click)="setVisibleContent(c)"
         >
             <span class="h-px w-10 bg-light_grey inline-block align-middle mr-4 group-hover:w-16 transition-all duration-300 group-hover:bg-secondary"
@@ -12,5 +14,7 @@
             </span>
             {{c.toUpperCase()}}
         </a>
+      </li>
     }
+  </ul>
 </nav>
