--- a/src/app/ui/about/about.component.html
+++ b/src/app/ui/about/about.component.html
@@ -1,6 +1,6 @@
-<section id="about">
+<section>
     <p>I began my software development journey in 2011, when I took IT in Grade 10. I immediately fell in love with programming.</p>
-    <p>I joined <a href="https://www.dvt.co.za" target="_blank" class="text-accent">DVT</a>'s Graduate program in 2021.</p>
+    <p>I joined <a href="https://www.dvt.co.za" target="_blank" class="text-secondary">DVT</a>'s Graduate program in 2021.</p>
     <p>I have now been there for a little over 3 years!</p>
 </section>
 
