Add basic skills

--- a/src/app/ui/nav/nav.component.html
+++ b/src/app/ui/nav/nav.component.html
@@ -1,5 +1,5 @@
 <nav class="flex flex-col text-xs font-light">
-  <ul class="w-max">
+  <ul class="lg:w-max">
     @for (c of content; track c) {
       <li class="mb-2">
         <a [href]="'#' + c"
