--- a/src/styles.scss
+++ b/src/styles.scss
@@ -8,6 +8,7 @@
   --secondary: #66fcf1;
   --tertiary: #45a29e;
   --accent: #ffd23c;
+  --dark-blue: #103b4b;
   --blue: #124e66;
   --dark: #0b0c10;
   --grey: #1f2833;
@@ -18,7 +19,9 @@
 }
 
 @supports (font-variation-settings: normal) {
-  :root { font-family: InterVariable, sans-serif; }
+  :root {
+    font-family: InterVariable, sans-serif;
+  }
 }
 
 html, body {
