Update about me section

--- a/src/app/ui/about/about.component.html
+++ b/src/app/ui/about/about.component.html
@@ -1,6 +1,9 @@
 <section>
-    <p>I began my software development journey in 2011, when I took IT in Grade 10. I immediately fell in love with programming.</p>
-    <p>I joined <a href="https://www.dvt.co.za" target="_blank" class="text-secondary">DVT</a>'s Graduate program in 2021.</p>
-    <p>I have now been there for a little over 3 years!</p>
+  <p>
+    I began my software development journey in 2011, when I took IT in high school. I fell in love with programming immediately. Fast-forward to today and I've worked on many different software
+    projects, for companies in various industries, such as <a class="text-white hover:text-secondary" href="https://www.tracker.co.za" target="_blank">vehicle-tracking</a>,
+    <a class="text-white hover:text-secondary" href="https://uk.apleona.com" target="_blank">facilities
+      management</a> & <a class="text-white hover:text-secondary" href="https://www.dvt.co.za" target="_blank">software solutions.</a>
+  </p>
 </section>
 
