--- a/src/app/ui/sidebar/sidebar.component.html
+++ b/src/app/ui/sidebar/sidebar.component.html
@@ -8,7 +8,7 @@
     <!--        <h4 class="text-3xl">I currently work for <a href="https://www.dvt.co.za/" class="text-accent" target="_blank">DVT</a>.</h4>-->
   </header>
   <section class="sticky top-0 flex justify-between items-center lg:gap-20 lg:flex-col lg:grow">
-    <tr-nav class="lg:w-10 text-primary lg:relative -left-10 w-1/2"/>
+    <tr-nav class="lg:w-10 text-primary lg:relative -left-10 w-1/2 lg:grow"/>
     <tr-social class="text-primary"/>
   </section>
 </aside>
