--- a/src/app/ui/nav/nav.component.html
+++ b/src/app/ui/nav/nav.component.html
@@ -1,4 +1,4 @@
-<nav class="flex flex-col text-xs font-light">
+<nav class="flex flex-col justify-center font-light h-full">
   <ul class="lg:w-max">
     @for (c of content; track c) {
       <li class="mb-2">
@@ -12,7 +12,7 @@
                   [class.bg-secondary]="isSelected(c)"
                   [class.w-16]="isSelected(c)">
             </span>
-            {{c.toUpperCase()}}
+          {{ c.toUpperCase() }}
         </a>
       </li>
     }
