Minor visual and content updates

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<section class="flex flex-col lg:grid lg:grid-cols-2 lg:gap-40">
+<section class="flex flex-col lg:grid lg:grid-cols-2 lg:gap-20 2xl:gap-40">
   <tr-sidebar/>
   <main class="flex flex-col gap-10 pt-10 lg:py-40">
     <tr-about IsVisible aria-label="about" id="about"/>
