--- a/src/app/ui/about/about.component.html
+++ b/src/app/ui/about/about.component.html
@@ -1,9 +1,11 @@
-<section>
+<section class="text-light_grey">
   <p>
     I began my software development journey in 2011, when I took IT in high school. I fell in love with programming immediately. Fast-forward to today and I've worked on many different software
     projects, for companies in various industries, such as <a class="text-white hover:text-secondary" href="https://www.tracker.co.za" target="_blank">vehicle-tracking</a>,
     <a class="text-white hover:text-secondary" href="https://uk.apleona.com" target="_blank">facilities
       management</a> & <a class="text-white hover:text-secondary" href="https://www.dvt.co.za" target="_blank">software solutions.</a>
   </p>
+  <br>
+  <p>My latest fascinations are <a class="text-white hover:text-secondary" href="https://aws.amazon.com/certification/" target="_blank">AWS certifications</a> and tinkering with their products.</p>
 </section>
 
