--- a/src/app/ui/sidebar/sidebar.component.html
+++ b/src/app/ui/sidebar/sidebar.component.html
@@ -3,8 +3,8 @@
     <h1 class="text-2xl lg:text-3xl">Hi, my name is</h1>
     <h2 class="text-white text-6xl lg:text-8xl lg:text-nowrap">Taylor Ray.</h2>
     <h3 class="text-3xl lg:text-4xl">I build things for the web.</h3>
-    <p class="text-light_grey">I built this portfolio with Angular 17 and Tailwind, using Github to automate deployments to an AWS S3 bucket. I'm using an AWS Cloudfront distribution with an AWS ACM
-      generated SSL certificate to serve the content.</p>
+    <!--    <p class="text-light_grey">I built this portfolio with Angular 17 and Tailwind, using Github to automate deployments to an AWS S3 bucket. I'm using an AWS Cloudfront distribution with an AWS ACM-->
+    <!--      generated SSL certificate to serve the content.</p>-->
     <!--        <h4 class="text-3xl">I currently work for <a href="https://www.dvt.co.za/" class="text-accent" target="_blank">DVT</a>.</h4>-->
   </header>
   <section class="sticky top-0 flex justify-between items-center lg:gap-20 lg:flex-col lg:grow">
