Center tab text

--- a/src/app/features/transcribe/transcribe.component.html
+++ b/src/app/features/transcribe/transcribe.component.html
@@ -1,6 +1,6 @@
 <section class="flex flex-col items-center max-h-screen w-full min-w-full text-lg">
   <nav class="h-32 min-h-32 flex justify-center items-center">
-    <ul class="flex justify-center gap-5 text-xl font-light">
+    <ul class="flex justify-center gap-5 text-xl font-light text-center">
       <li (click)="view = 'list'" [class.text-secondary]="view === 'list'" class="cursor-pointer">
         ALL TRANSCRIPTS
       </li>
