--- a/src/app/features/home/home.component.html
+++ b/src/app/features/home/home.component.html
@@ -1,4 +1,4 @@
-<section class="flex flex-col lg:grid lg:grid-cols-2 lg:gap-20 2xl:gap-40">
+<section class="flex flex-col lg:grid lg:grid-cols-2 lg:gap-20 2xl:gap-40 px-10 lg:px-40 2xl:px-60">
   <tr-sidebar/>
   <main class="flex flex-col gap-10 pt-10 lg:py-40">
     <tr-about IsVisible aria-label="about" id="about"/>
