--- a/src/styles.scss
+++ b/src/styles.scss
@@ -8,11 +8,11 @@
   --secondary: #66fcf1;
   --tertiary: #45a29e;
   --accent: #ffd23c;
-  --dark-blue: #103b4b;
+  --dark-blue: #0d303b;
   --blue: #124e66;
   --dark: #0b0c10;
   --grey: #1f2833;
-  --light-grey: #838383;
+  --light-grey: #a2b8cb;
   --white: #fff;
   font-family: Inter, sans-serif;
   font-feature-settings: 'liga' 1, 'calt' 1; /* fix for Chrome */
