--- a/src/app/features/home/ui/skills/skills.component.html
+++ b/src/app/features/home/ui/skills/skills.component.html
@@ -1,10 +1,10 @@
 <section class="flex flex-col gap-5 2xl:w-2/3">
   @for (category of skills; track category) {
-    <div class=" transition-all duration-300 rounded-2xl">
-      <h3 class="text-2xl pb-2">{{ category.heading }}</h3>
+    <div class="transition-all duration-300 rounded-2xl">
+      <h3 class="text-lg pb-2 text-white">{{ category.heading }}</h3>
       <div class="flex flex-wrap gap-2 text-secondary text-center">
         @for (skill of category.skills; track skill) {
-          <span class="bg-blue rounded-full py-2 px-3 min-w-20">{{ skill }}</span>
+          <span class="bg-blue rounded-full py-2 px-3 min-w-20 text-sm">{{ skill }}</span>
         }
       </div>
     </div>
