--- a/src/app/features/home/ui/sidebar/sidebar.component.html
+++ b/src/app/features/home/ui/sidebar/sidebar.component.html
@@ -1,7 +1,7 @@
 <aside class="lg:sticky flex flex-col lg:items-center w-full lg:h-screen lg:min-h-screen max-h-screen top-0 gap-5 pt-10 lg:py-40">
   <header class="flex flex-col gap-3">
     <h1 class="text-2xl lg:text-3xl">Hi, my name is</h1>
-    <h2 class="text-white text-6xl lg:text-8xl lg:text-nowrap">Taylor Ray.</h2>
+    <h2 class="text-white text-6xl lg:text-7xl lg:text-nowrap font-semibold">Taylor Ray.</h2>
     <h3 class="text-3xl lg:text-4xl">I build things for the web.</h3>
     <!--    <p class="text-light_grey">I built this portfolio with Angular 17 and Tailwind, using Github to automate deployments to an AWS S3 bucket. I'm using an AWS Cloudfront distribution with an AWS ACM-->
     <!--      generated SSL certificate to serve the content.</p>-->
