--- a/src/app/features/home/ui/experience/experience.component.html
+++ b/src/app/features/home/ui/experience/experience.component.html
@@ -1,11 +1,11 @@
-<section class="text-light_grey">
+<section class="text-light_grey flex flex-col gap-16">
   @for (job of jobs; track job) {
     <a class="group relative" [href]="job.employer.url" target="_blank">
       <div class="absolute -inset-x-4 -inset-y-4 z-0 hidden rounded-md transition border-white/5
                   lg:-inset-x-6 lg:block lg:group-hover:bg-slate-500/10 lg:group-hover:border-t lg:group-hover:drop-shadow-lg">
       </div>
-      <div class="flex gap-10 mb-10">
-        <div class="text-xs w-1/4">
+      <div class="flex flex-col lg:flex-row lg:gap-10">
+        <div class="text-xs lg:w-1/4">
           <p class="font-medium my-1">{{ job.timeline.text }}</p>
           <!--          <p class="font-medium my-1 uppercase">{{ job.employer.type }}</p>-->
           <!--          <p class="text-xs">{{ getDuration(job.timeline.startDate, job.timeline.endDate) }} </p>-->
@@ -13,7 +13,7 @@
         </div>
         <div class="flex-1">
           <div class="leading-snug">
-            <h3 class="text-white">{{ job.title }} · {{ job.employer.name }} <i class="lg:hidden group-hover:inline-block ml-2 h-4 w-4">
+            <h3 class="text-white">{{ job.title }} · {{ job.employer.name }} <i class="inline-block lg:hidden group-hover:inline-block ml-2 h-4 w-4">
               <tr-new-tab-icon/>
             </i></h3>
 
@@ -35,34 +35,5 @@
       </div>
     </a>
   }
-  <!--  <ol>-->
-  <!--    <li>-->
-  <!--      <span>DVT</span>-->
   <!--      <span>{{ getDuration(experience[0].startDate, experience[0].endDate) }}</span>-->
-  <!--    </li>-->
-  <!--    <li>-->
-  <!--      <span>DVT</span>-->
-  <!--      <span>{{ getDuration(experience[0].startDate, experience[0].endDate) }}</span>-->
-  <!--    </li>-->
-  <!--    <li>-->
-  <!--      <span>DVT</span>-->
-  <!--      <span>{{ getDuration(experience[0].startDate, experience[0].endDate) }}</span>-->
-  <!--    </li>-->
-  <!--    <li>-->
-  <!--      <span>DVT</span>-->
-  <!--      <span>{{ getDuration(experience[0].startDate, experience[0].endDate) }}</span>-->
-  <!--    </li>-->
-  <!--    <li>-->
-  <!--      <span>DVT</span>-->
-  <!--      <span>{{ getDuration(experience[0].startDate, experience[0].endDate) }}</span>-->
-  <!--    </li>-->
-  <!--    <li>-->
-  <!--      <span>DVT</span>-->
-  <!--      <span>{{ getDuration(experience[0].startDate, experience[0].endDate) }}</span>-->
-  <!--    </li>-->
-  <!--    <li>-->
-  <!--      <span>DVT</span>-->
-  <!--      <span>{{ getDuration(experience[0].startDate, experience[0].endDate) }}</span>-->
-  <!--    </li>-->
-  <!--  </ol>-->
 </section>
