Better mobile styling

--- a/src/app/features/home/components/about/about.component.html
+++ b/src/app/features/home/components/about/about.component.html
@@ -1,3 +1,4 @@
+<tr-section-heading>About</tr-section-heading>
 <section class="text-light_grey">
   <p>
     I began my software development journey in 2011, when I took IT in high school. I fell in love with programming immediately. Fast-forward to today and I've worked on many different software
