--- a/src/app/features/home/components/experience/experience.component.html
+++ b/src/app/features/home/components/experience/experience.component.html
@@ -1,3 +1,4 @@
+<tr-section-heading>Experience</tr-section-heading>
 <section class="text-light_grey flex flex-col gap-16">
   @for (job of jobs; track job) {
     <a class="group relative" [href]="job.employer.url" target="_blank">
