--- a/src/app/features/home/components/projects/projects.component.html
+++ b/src/app/features/home/components/projects/projects.component.html
@@ -1,3 +1,4 @@
+<tr-section-heading>Projects</tr-section-heading>
 <section class="flex flex-col gap-16">
   @for (project of projects; track project) {
     <a class="group relative" [href]="project.url">
