--- a/src/app/features/home/components/skills/skills.component.html
+++ b/src/app/features/home/components/skills/skills.component.html
@@ -1,3 +1,4 @@
+<tr-section-heading>Skills</tr-section-heading>
 <section class="flex flex-col gap-5 2xl:w-2/3">
   @for (category of skills; track category) {
     <div class="transition-all duration-300 rounded-2xl">
