--- a/src/app/features/home/home.component.html
+++ b/src/app/features/home/home.component.html
@@ -1,6 +1,6 @@
-<section class="flex flex-col lg:grid lg:grid-cols-2 lg:gap-20 2xl:gap-40 px-10 lg:px-40 2xl:px-60">
+<section class="flex flex-col lg:grid lg:grid-cols-2 px-5 md:mx-10 lg:mx-20 2xl:mx-80 2xl:px-20 pb-20">
   <tr-sidebar/>
-  <main class="flex flex-col gap-40 pt-10 lg:py-40">
+  <main class="flex flex-col gap-20 pt-10 lg:py-40">
     <tr-about IsVisible aria-label="about" id="about"/>
     <tr-experience IsVisible aria-label="experience" id="experience"/>
 
