--- a/src/app/features/home/components/sidebar/sidebar.component.html
+++ b/src/app/features/home/components/sidebar/sidebar.component.html
@@ -1,9 +1,9 @@
-<aside class="lg:sticky flex flex-col justify-center items-center w-full h-screen min-h-screen max-h-screen top-0 gap-20
-              lg:items-start lg:gap-10 lg:py-40">
+<aside class="flex flex-col justify-center items-center w-full h-screen min-h-screen max-h-screen top-0 gap-20
+              lg:sticky lg:items-start lg:gap-10 lg:py-32">
   <header class="flex flex-col gap-3 w-fit lg:h-fit text-center lg:text-left">
     <h1 class="text-white text-5xl lg:text-7xl text-nowrap font-semibold">Taylor Ray</h1>
     <h2 class="text-xl text-white/90 text-nowrap lg:text-2xl">Frontend Web Developer</h2>
-    <h3 class="text-sm font-light sm:w-[400px] lg:w-[300px] leading-snug">I build functional and creative web applications that solve real world problems</h3>
+    <h3 class="text-sm font-light max-w-[400px] lg:w-[300px] leading-snug">I build functional and creative web applications that solve real world problems</h3>
     <!-- <h3 class="lg:text-xl lg:hidden">Please look around!</h3> -->
     <!--    <p class="text-light_grey">I built this portfolio with Angular 17 and Tailwind, using Github to automate deployments to an AWS S3 bucket. I'm using an AWS Cloudfront distribution with an AWS ACM-->
     <!--      generated SSL certificate to serve the content.</p>-->
