--- a/src/app/features/home/components/experience/experience.component.html
+++ b/src/app/features/home/components/experience/experience.component.html
@@ -7,14 +7,14 @@
       </div>
       <div class="flex flex-col lg:flex-row lg:gap-10">
         <div class="text-xs lg:w-1/4">
-          <p class="font-medium my-1">{{ job.timeline.text }}</p>
+          <p class="font-medium my-1 text-nowrap">{{ job.timeline.text }}</p>
           <!--          <p class="font-medium my-1 uppercase">{{ job.employer.type }}</p>-->
           <!--          <p class="text-xs">{{ getDuration(job.timeline.startDate, job.timeline.endDate) }} </p>-->
           <!--          <p class="text-sm mt-1">{{ job.employer.description }}</p>-->
         </div>
         <div class="flex-1">
           <div class="leading-snug">
-            <h3 class="text-white">{{ job.title }} · {{ job.employer.name }} <i class="inline-block lg:hidden group-hover:inline-block ml-2 h-4 w-4">
+            <h3 class="text-white text-nowrap">{{ job.title }} · {{ job.employer.name }} <i class="inline-block lg:hidden group-hover:inline-block ml-2 h-4 w-4">
               <tr-new-tab-icon/>
             </i></h3>
 
