--- a/src/app/features/home/components/experience/experience.component.html
+++ b/src/app/features/home/components/experience/experience.component.html
@@ -1,5 +1,5 @@
 <tr-section-heading>Experience</tr-section-heading>
-<section class="text-light_grey flex flex-col gap-16">
+<section class="text-light_grey flex flex-col gap-16 font-light lg:font-normal">
   @for (job of jobs; track job) {
     <a class="group relative" [href]="job.employer.url" target="_blank">
       <div class="absolute -inset-x-4 -inset-y-4 z-0 hidden rounded-md transition border-white/5
@@ -7,23 +7,27 @@
       </div>
       <div class="flex flex-col lg:flex-row lg:gap-10">
         <div class="text-xs lg:w-1/4">
-          <p class="font-medium my-1 text-nowrap">{{ job.timeline.text }}</p>
+          <p class="font-normal lg:font-medium mt-1 text-nowrap">{{ job.timeline.text }}</p>
           <!--          <p class="font-medium my-1 uppercase">{{ job.employer.type }}</p>-->
           <!--          <p class="text-xs">{{ getDuration(job.timeline.startDate, job.timeline.endDate) }} </p>-->
           <!--          <p class="text-sm mt-1">{{ job.employer.description }}</p>-->
         </div>
         <div class="flex-1">
-          <div class="leading-snug">
-            <h3 class="text-white text-nowrap">{{ job.title }} · {{ job.employer.name }} <i class="inline-block lg:hidden group-hover:inline-block ml-2 h-4 w-4">
-              <tr-new-tab-icon/>
-            </i></h3>
+          <div class="leading-snug py-2 lg:pt-0">
+            <h3 class="hidden sm:inline text-white text-nowrap">{{ job.title }} · {{ job.employer.name.toUpperCase() }}
+              <i class="inline-block lg:hidden group-hover:inline-block mt-1 lg:ml-2 h-3 w-3"><tr-new-tab-icon/></i>
+            </h3>
+            <h3 class="sm:hidden text-white text-nowrap font-normal">{{ job.employer.name.toUpperCase() }}
+              <i class="inline-block lg:hidden group-hover:inline-block mt-1 lg:ml-2 h-3 w-3"><tr-new-tab-icon/></i>
+            </h3>
+            <h3 class="sm:hidden text-white text-nowrap">{{ job.title }}</h3>
 
             @for (subtitle of job.subTitles; track subtitle) {
               <h4 class="text-primary">{{ subtitle }}</h4>
             }
           </div>
 
-          <p class="">{{ job.employer.description }}</p>
+          <p class="leading-tight">{{ job.employer.description }}</p>
 
           <p class="my-4 font-light text-sm">{{ job.responsibilities }}</p>
 
