--- a/src/app/features/home/home.component.html
+++ b/src/app/features/home/home.component.html
@@ -5,13 +5,13 @@
     <tr-experience IsVisible aria-label="experience" id="experience"/>
 
     <!--      @defer (on viewport) {-->
-    <!-- <tr-skills IsVisible aria-label="skills" id="skills"/> -->
+    <tr-skills IsVisible aria-label="skills" id="skills"/>
     <!--      } @placeholder {-->
     <!--        <section id="experience">Experience</section>-->
     <!--      }-->
 
     <!--      @defer (on viewport) {-->
-    <!-- <tr-projects IsVisible aria-label="projects" id="projects"/> -->
+    <tr-projects IsVisible aria-label="projects" id="projects"/>
     <!--      } @placeholder {-->
     <!--        <section id="projects">Projects</section>-->
     <!--      }-->
