Minor visual updates

--- a/src/app/features/home/components/about/about.component.html
+++ b/src/app/features/home/components/about/about.component.html
@@ -7,6 +7,6 @@
       management</a> & <a class="text-white hover:text-secondary" href="https://www.dvt.co.za" target="_blank">software solutions.</a>
   </p>
   <br>
-  <p>My latest fascinations are <a class="text-white hover:text-secondary" href="https://aws.amazon.com/certification/" target="_blank">AWS certifications</a> and tinkering with their products.</p>
+  <p>My latest interest is <a class="text-white hover:text-secondary" href="https://aws.amazon.com" target="_blank">AWS</a> - achieving <a class="text-white hover:text-secondary" href="https://aws.amazon.com/certification/" target="_blank">certifications</a> and building things using their products & services.</p>
 </section>
 
