--- a/src/app/features/home/home.component.html
+++ b/src/app/features/home/home.component.html
@@ -1,5 +1,5 @@
-<section class="flex flex-col lg:grid lg:grid-cols-2 px-5 sm:mx-10 lg:mx-20 xl:px-10 xl:mx-40 2xl:mx-80 2xl:pl-20">
-  <tr-sidebar/>
+<section class="flex flex-col lg:grid lg:grid-cols-2 max-w-screen-xl px-5 sm:mx-10 lg:mx-20 xl:px-10 xl:mx-40 2xl:mx-auto 2xl:pl-20 font-sans">
+  <tr-sidebar />
   <main class="flex flex-col gap-20 pb-20 lg:py-32">
     <tr-about IsVisible aria-label="about" id="about"/>
     <tr-experience IsVisible aria-label="experience" id="experience"/>
