--- a/src/app/features/home/home.component.html
+++ b/src/app/features/home/home.component.html
@@ -1,4 +1,4 @@
-<section class="flex flex-col lg:grid lg:grid-cols-2 max-w-screen-xl px-5 sm:mx-10 lg:mx-20 xl:px-10 xl:mx-40 2xl:mx-auto 2xl:pl-20 font-sans">
+<section class="flex flex-col lg:grid lg:grid-cols-2 max-w-screen-xl px-5 sm:mx-10 lg:mx-20 xl:px-10 xl:mx-40 2xl:mx-auto 2xl:pl-20 font-sans relative">
   <tr-sidebar />
   <main class="flex flex-col gap-20 pb-20 lg:py-32">
     <tr-about IsVisible aria-label="about" id="about"/>
@@ -17,6 +17,7 @@
     <!--      }-->
   </main>
 </section>
+
 @if (userHasScrolled) {
   <a href="#top" class="fixed bottom-5 right-5 w-10 h-10 text-primary border-secondary rounded-lg p-1 lg:hidden">
     <tr-arrow-up-icon/>
