--- a/src/app/features/home/shared/ui/section-heading/section-heading.component.html
+++ b/src/app/features/home/shared/ui/section-heading/section-heading.component.html
@@ -1,3 +1,3 @@
-<h1 class="text-2xl text-white/80 font-bold mb-5 lg:hidden">
+<h2 class="text-sm uppercase tracking-wider text-white/80 font-bold mb-5 lg:hidden">
     <ng-content></ng-content>
-</h1>
+</h2>
