Updae mouse effect

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -8,7 +8,7 @@
   --secondary: #66fcf1;
   --tertiary: #45a29e;
   --accent: #ffd23c;
-  --dark-blue: #0d303b;
+  --dark-blue: #0d2f39;
   --dark-blue-variant: #0a262e;
   --blue: #124e66;
   --dark: #0b0c10;
