--- a/src/app/features/home/components/social/social.component.html
+++ b/src/app/features/home/components/social/social.component.html
@@ -1,5 +1,5 @@
 <footer class="flex gap-4 text-white">
-  <a class="opacity-70 hover:opacity-100" href="https://linkedin.com/in/traydvt/" target="_blank">
+  <a class="opacity-70 hover:opacity-100" href="https://linkedin.com/in/traysoftware/" target="_blank">
     <tr-linkedin-icon/>
   </a>
   <a class="opacity-70 hover:opacity-100" href="https://github.com/teeray10" target="_blank">
