--- a/src/app/features/home/components/sidebar/sidebar.component.html
+++ b/src/app/features/home/components/sidebar/sidebar.component.html
@@ -1,5 +1,5 @@
 <aside class="flex flex-col justify-center items-center w-full h-screen min-h-screen max-h-screen top-0 gap-20
-              lg:sticky lg:items-start lg:gap-10 lg:py-60 lg:w-1/2">
+              lg:sticky lg:items-start lg:gap-10 lg:py-60 lg:w-fit">
   <header class="flex flex-col gap-3 w-fit lg:h-fit text-center lg:text-left">
     <h1 class="text-white text-5xl lg:text-7xl text-nowrap font-semibold">Taylor Ray</h1>
     <h2 class="text-xl text-white/90 text-nowrap lg:text-2xl">Frontend Web Developer</h2>
