--- a/src/app/features/home/home.component.html
+++ b/src/app/features/home/home.component.html
@@ -1,6 +1,9 @@
-<section class="flex flex-col lg:grid lg:grid-cols-2 max-w-screen-xl px-5 sm:mx-10 lg:mx-20 xl:px-10 xl:mx-40 2xl:mx-auto 2xl:pl-20 font-sans relative tracking-wide">
+<section class="flex flex-col max-w-screen-xl px-5 font-sans relative tracking-wide
+                sm:mx-10 
+                lg:grid lg:grid-cols-3 lg:mx-auto lg:px-10
+                2xl:pl-20">
   <tr-sidebar />
-  <main class="flex flex-col gap-20 pb-20 lg:py-32">
+  <main class="flex flex-col gap-20 pb-20 lg:py-32 grow col-span-2 lg:ml-20 xl:ml-40">
     <tr-about IsVisible aria-label="about" id="about"/>
     <tr-experience IsVisible aria-label="experience" id="experience"/>
 
