--- a/src/app/features/home/components/nav/nav.component.html
+++ b/src/app/features/home/components/nav/nav.component.html
@@ -1,4 +1,4 @@
-<nav class="flex flex-col justify-center font-light h-full">
+<nav class="flex flex-col justify-center text-sm uppercase tracking-widest font-medium h-full">
   <ul class="lg:w-max">
     @for (c of content; track c) {
       <li class="mb-2">
