--- a/src/app/features/home/components/skills/skills.component.html
+++ b/src/app/features/home/components/skills/skills.component.html
@@ -2,7 +2,7 @@
 <section class="flex flex-col gap-5 2xl:w-2/3">
   @for (category of skills; track category) {
     <div class="transition-all duration-300 rounded-2xl">
-      <h3 class="text-lg pb-2 text-white">{{ category.heading }}</h3>
+      <h3 class="text-sm uppercase tracking-widest pb-2 text-white/80">{{ category.heading }}</h3>
       <div class="flex flex-wrap gap-2 text-secondary text-center">
         @for (skill of category.skills; track skill) {
           <span class="bg-blue rounded-full py-2 px-3 min-w-20 text-sm">{{ skill }}</span>
