Minor visual updates, update about & projects content

--- a/src/app/features/home/components/about/about.component.html
+++ b/src/app/features/home/components/about/about.component.html
@@ -8,5 +8,7 @@
   </p>
   <br>
   <p>My latest interest is <a class="text-white hover:text-secondary" href="https://aws.amazon.com" target="_blank">AWS</a> - achieving <a class="text-white hover:text-secondary" href="https://aws.amazon.com/certification/" target="_blank">certifications</a> and building things using their products & services.</p>
+  <br>
+  <p>When I'm not at my computer you can find me <a class="text-white hover:text-secondary" href="https://www.strava.com/athletes/113476131" target="_blank">trying to stay fit</a> or <a class="text-white hover:text-secondary" href="https://app.playtomic.io/profile/user/3559869?utm_source=app_ios&utm_medium=share" target="_blank">playing padel with friends</a>.</p>
 </section>
 
