--- a/src/app/features/home/components/sidebar/sidebar.component.html
+++ b/src/app/features/home/components/sidebar/sidebar.component.html
@@ -3,7 +3,7 @@
   <header class="flex flex-col gap-3 w-fit lg:h-fit text-center lg:text-left">
     <h1 class="text-white text-5xl lg:text-7xl text-nowrap font-semibold">Taylor Ray</h1>
     <h2 class="text-xl text-white/90 text-nowrap lg:text-2xl">Frontend Web Developer</h2>
-    <h3 class="font-light max-w-[400px] leading-snug">I build functional and creative web applications that solve real world problems</h3>
+    <h3 class="font-light max-w-[400px] lg:max-w-[350px] leading-snug">I build functional and creative web applications that solve real world problems</h3>
     <!-- <h3 class="lg:text-xl lg:hidden">Please look around!</h3> -->
     <!--    <p class="text-light_grey">I built this portfolio with Angular 17 and Tailwind, using Github to automate deployments to an AWS S3 bucket. I'm using an AWS Cloudfront distribution with an AWS ACM-->
     <!--      generated SSL certificate to serve the content.</p>-->
