--- a/src/styles.scss
+++ b/src/styles.scss
@@ -5,12 +5,12 @@
 
 :root {
   --primary: #c5c6c7;
-  --secondary: #66fcf1;
+  --secondary: #77fff6;
   --tertiary: #45a29e;
   --accent: #ffd23c;
   --dark-blue: #0d2f39;
   --dark-blue-variant: #0a262e;
-  --blue: #124e66;
+  --blue: #103544;
   --dark: #0b0c10;
   --grey: #1f2833;
   --light-grey: #a2b8cb;
